--- a/aula16ex/ex018/modelo.html
+++ b/aula16ex/ex018/modelo.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabuada</title>
+    <title>Analisador de números</title>
     <link rel="stylesheet" href="estilo.css">
 
 </head>
 <body>
     <header>
-        <h1>Tabuada</h1>
+        <h1>Analizador de Números</h1>
     </header>
     <section>
         <div>
-        
-    <p>Número: <input type="number" name="num" id="txtn">
-    <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
+            Número ( entre 1 e 100):
+            <input type="number" name="fnum" id="fnum">
+            <input type="button" value="adicionar" onclick="adicionar()">
+            <br> <br> <select name="flista" id="flista" size="6"></select> 
+            <br><input type="button" value="finalizar" onclick="finalizar()">
+
         </div>
-        <div>
-    <select name="tabuada" id="seltab" size="">
-       <option>Digite um número acima</option>
-    </select>
+        <div id="res">
+
         </div>
     </section>
     <footer>
